--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,181 @@
-.App {
-  text-align: center;
+*{
+    margin: 0;
+    padding: 0;
+    border: none;
+}
+a{
+    text-decoration: none;
+}
+.container{
+    width: 80%;
+    margin: 0 auto;
+}
+#header{
+    padding: 25px 0;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
+}
+.header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.header-nav a{
+    font-weight: 400;
+    font-size: 18px;
+    color: rgba(31, 46, 53, 0.8);
+    margin: 0 25px;
+}
+.header-nav select{
+    font-weight: 400;
+    font-size: 18px;
+    color: rgba(31, 46, 53, 0.8);
+    outline: none;
+    margin: 0 20px;
+}
+.header-icons a{
+    color: rgba(31, 46, 53, 0.8);
+    font-size: 25px;
+    margin: 2px 5px;
+}
+.hero{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 70px;
+}
+.hero-title h1{
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 133.69%;
+    color: #1F2E35;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.hero-title h1 span {
+    color: #EE4248;
+}
+.hero-title p{
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 29px;
+    color: #30444E;
+    padding: 20px 0;
+}
+.hero-title button {
+    width: 161px;
+    height: 53px;
+    background: #EE4248;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 20px;
+    color: #FFFFFF;
+}
+#about{
+    padding: 40px 0;
+    background: #F7F7F7;
+}
+.about {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.about-title h1 {
+    font-weight: 500;
+    font-size: 32px;
+    line-height: 133.69%;
+    color: #1F2E35;
+}
+.about-title h1 span{
+    color: rgba(239, 82, 82, 0.94);
+}
+.about-title p{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+    color: #30444E;
+}
+.about-title p span{
+    color: rgba(239, 82, 82, 0.94);
+}
+#product{
+    padding: 60px;
+}
+.product{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.font {
+    font-weight: 500;
+    font-size: 32px;
+    text-align: center;
+    color: #1F2E35;
+    padding: 40px;
+}
+.product-out1 h2{
+    font-weight: 500;
+    font-size: 28px;
+    color: #EE4248;
+}
+.product-out1 p{
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 150%;
+    color: #30444E;
+    padding: 20px 0;
+}
+.product-out1 button {
+    width: 119px;
+    height: 42px;
+    background: #EE4248;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.25);
+    border-radius: 4px;
+    font-weight: 400;
+    font-size: 18px;
+    color: #FFFFFF;
+}
+#contact {
+    padding: 50px 0;
+}
+.contact {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+}
+.contact-title h5{
+    font-weight: 500;
+    font-size: 18px;
+    color: #263238;
+}
+.contact-title p{
+    font-weight: 300;
+    font-size: 18px;
+    color: #263238;
+}
+.contact-title2{
+    padding-top: 36px;
+    padding-left: 25px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.contact-title2 h4{
+    font-weight: 500;
+    font-size: 24px;
+    color: #263238;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.contact-title2 p{
+    font-weight: 300;
+    font-size: 18px;
+    line-height: 149.19%;
+    color: #263238;
 }
-
-.App-link {
-  color: #61dafb;
+#footer{
+    height: 64px;
+    background: #EE4248;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.footer h1 {
+    font-weight: 400;
+    font-size: 18px;
+    color: #FFFFFF;
+    text-align: center;
+    padding-top: 25px;
 }
